<resources>
    <string name="facebook_app_id">2182303115328583</string>
    <string name="fb_login_protocol_scheme">fbAPP_ID</string>
    <string name="app_name">SpaFitness</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contrasena</string>
    <string name="repetir_contrasena">Repetir Contrasena</string>
    <string name="email">Correo</string>
    <string name="Usuario">Usuario</string>
    <string name="Contrasena">Contrasena</string>
    <string name="entrar">Entrar</string>
    <string name="registrar">Registrar</string>
    <string name="enviar">Enviar</string>
    <string name="cancelar">Cancelar</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="edad">Edad</string>
    <string name="cargarcitas">Cargar citas</string>
    <string name="verreservas">Ver reservas</string>
    <string name="citaguardad">Cita ha sido guardada.</string>
    <string name="cancelarcitas">Cancelar citas pendientes</string>
    <string name="nombrecita">Tienes una cita a nombre de: </string>
    <string name="reservas">Mis Reservas</string>
    <string name="reservaspendientes">Actualmente tienes la siguiente reserva</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>
